header component fix z-index making it unclickable

--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -239,7 +239,7 @@ header {
             height: 1000vh;
             background: transparent;
             position: absolute;
-            z-index: 98;
+            z-index: 0;
             user-select: all !important;
             pointer-events: all !important;
         }
