--- a/src/style/general.css
+++ b/src/style/general.css
@@ -333,7 +333,7 @@ header .header--nav .header--nav--ul .dropdown a .window--icon {
     height: 1000vh;
     background: transparent;
     position: absolute;
-    z-index: 98;
+    z-index: 0;
     -webkit-user-select: all !important;
        -moz-user-select: all !important;
         -ms-user-select: all !important;
